fix(web): pron section wrapping

--- a/web/src/app/word-details-hero/word-details-hero.component.scss
+++ b/web/src/app/word-details-hero/word-details-hero.component.scss
@@ -27,10 +27,6 @@
   padding-top: 8px;
 }
 
-.pron-section {
-  height: 32px;
-}
-
 .action-button {
   float: right;
 }
